--- a/data/Defensive Ships In Player Colonies/config.properties
+++ b/data/Defensive Ships In Player Colonies/config.properties
@@ -2,4 +2,5 @@ embeddedEditorPackages=None
 isReadOnly=false
 packPathType=GALACTIC_ADVENTURES
 packageName=Defensive_Ships_In_Player_Colonies.package
+showOnlyModded=false
 sources="Spore (Game & Graphics)"
